begin basic html, css layout

--- a/Part 1 - Personal Blog/index.html
+++ b/Part 1 - Personal Blog/index.html
@@ -5,10 +5,64 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="style.css">
+    <title>Seb Lex's Personal Blog</title>
 </head>
 
 <body>
+    <nav class="top-nav">
+        <div class="container">
+            <div class="logo">Seb Lex's Blog</div>
+            <div>
+                <ul class="nav">
+                    <li><a href="#">About</a></li>
+                    <li><a href="#">Posts</a></li>
+                    <li><a href="#">Contact</a></li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+
+    <img src="https://place-puppy.com/300x300" alt="banner">
+
+    <div class="wrapper">
+        <div class="posts">
+            <article>
+                <h2>Article 1</h2>
+                <img src="https://place-puppy.com/300x300" alt="">
+                <p>Lorem ipsum dolor sit.</p>
+                <a href="#" alt="read more">read more</a>
+            </article>
+            <article>
+                <h2>Article 2</h2>
+                <img src="https://place-puppy.com/300x300" alt="">
+                <p>Lorem ipsum dolor sit.</p>
+                <a href="#" alt="read more">read more</a>
+            </article>
+            <article>
+                <h2>Article 3</h2>
+                <img src="https://place-puppy.com/300x300" alt="">
+                <p>Lorem ipsum dolor sit.</p>
+                <a href="#" alt="read more">read more</a>
+            </article>
+        </div>
+        <nav class="side-nav">
+            <div class="profile">
+                <img src="#" alt="seb">
+                <span>Seb Lex</span>
+                <p>Lorem ipsum dolor sit.</p>
+            </div>
+        </nav>
+    </div>
+
+    <footer class="footer">
+        <ul>
+            <li><a href="#">Twitter</a></li>
+            <li><a href="#">Instagram</a></li>
+            <li><a href="#">Facebook</a></li>
+        </ul>
+    </footer>
+
 
 </body>
 
