style top nav and header

--- a/Part 1 - Personal Blog/index.html
+++ b/Part 1 - Personal Blog/index.html
@@ -15,53 +15,62 @@
             <div class="logo">Seb Lex's Blog</div>
             <div>
                 <ul class="nav">
+                    <li><a href="#">Home</a></li>
                     <li><a href="#">About</a></li>
-                    <li><a href="#">Posts</a></li>
                     <li><a href="#">Contact</a></li>
                 </ul>
             </div>
         </div>
     </nav>
 
-    <img src="https://place-puppy.com/300x300" alt="banner">
+    <header class="header">
+        <div class="container">
+            <div>
+                <h1>Seb Lex Blog</h1>
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Obcaecati dignissimos commodi voluptates
+                    vitae
+                    corporis alias, aperiam excepturi vel omnis saepe quos debitis, ducimus maiores nulla nobis hic
+                    minus?
+                    Natus, doloremque?</p>
+            </div>
+            <img src="https://place-puppy.com/300x300" alt="banner">
+        </div>
+    </header>
 
-    <div class="wrapper">
-        <div class="posts">
-            <article>
+
+
+    <div class="content">
+        <div class="container">
+            <article class="card">
                 <h2>Article 1</h2>
-                <img src="https://place-puppy.com/300x300" alt="">
                 <p>Lorem ipsum dolor sit.</p>
                 <a href="#" alt="read more">read more</a>
             </article>
-            <article>
+            <article class="card">
                 <h2>Article 2</h2>
-                <img src="https://place-puppy.com/300x300" alt="">
                 <p>Lorem ipsum dolor sit.</p>
                 <a href="#" alt="read more">read more</a>
             </article>
-            <article>
+            <article class="card">
                 <h2>Article 3</h2>
-                <img src="https://place-puppy.com/300x300" alt="">
                 <p>Lorem ipsum dolor sit.</p>
                 <a href="#" alt="read more">read more</a>
             </article>
         </div>
-        <nav class="side-nav">
-            <div class="profile">
-                <img src="#" alt="seb">
-                <span>Seb Lex</span>
-                <p>Lorem ipsum dolor sit.</p>
-            </div>
-        </nav>
+
+        <aside class="profile">
+            <img src="#" alt="profile">
+            <h3>Seb Lex</h3>
+            <span>programmer</span>
+            <ul>
+                <li><a href="#">Twitter</a></li>
+                <li><a href="#">Instagram</a></li>
+                <li><a href="#">Facebook</a></li>
+            </ul>
+        </aside>
     </div>
 
-    <footer class="footer">
-        <ul>
-            <li><a href="#">Twitter</a></li>
-            <li><a href="#">Instagram</a></li>
-            <li><a href="#">Facebook</a></li>
-        </ul>
-    </footer>
+
 
 
 </body>
