style main content area

--- a/Part 1 - Personal Blog/index.html
+++ b/Part 1 - Personal Blog/index.html
@@ -39,29 +39,37 @@
 
 
 
-    <div class="content">
-        <div class="container">
+    <div class="content container">
+        <div class="cards">
             <article class="card">
                 <h2>Article 1</h2>
-                <p>Lorem ipsum dolor sit.</p>
-                <a href="#" alt="read more">read more</a>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laboriosam ullam natus culpa harum, fugit
+                    reiciendis similique! Quaerat nostrum, ipsum aspernatur id vel deleniti officia consequatur
+                    consectetur qui sequi eius quia.</p>
+                <button>read more</button>
             </article>
             <article class="card">
                 <h2>Article 2</h2>
-                <p>Lorem ipsum dolor sit.</p>
-                <a href="#" alt="read more">read more</a>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laboriosam ullam natus culpa harum, fugit
+                    reiciendis similique! Quaerat nostrum, ipsum aspernatur id vel deleniti officia consequatur
+                    consectetur qui sequi eius quia.</p>
+                <button>read more</button>
             </article>
             <article class="card">
                 <h2>Article 3</h2>
-                <p>Lorem ipsum dolor sit.</p>
-                <a href="#" alt="read more">read more</a>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laboriosam ullam natus culpa harum, fugit
+                    reiciendis similique! Quaerat nostrum, ipsum aspernatur id vel deleniti officia consequatur
+                    consectetur qui sequi eius quia.</p>
+                <button>read more</button>
             </article>
         </div>
 
         <aside class="profile">
-            <img src="#" alt="profile">
-            <h3>Seb Lex</h3>
-            <span>programmer</span>
+            <div>
+                <img src="#" alt="profile">
+                <h3>Seb Lex</h3>
+                <span>programmer</span>
+            </div>
             <ul>
                 <li><a href="#">Twitter</a></li>
                 <li><a href="#">Instagram</a></li>
