finish styline main content area

--- a/Part 1 - Personal Blog/index.html
+++ b/Part 1 - Personal Blog/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://kit.fontawesome.com/7dab968d48.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="style.css">
     <title>Seb Lex's Personal Blog</title>
 </head>
@@ -33,7 +34,7 @@
                     minus?
                     Natus, doloremque?</p>
             </div>
-            <img src="https://place-puppy.com/300x300" alt="banner">
+            <img src="https://www.stevensegallery.com/300/300" alt="banner">
         </div>
     </header>
 
@@ -66,14 +67,14 @@
 
         <aside class="profile">
             <div>
-                <img src="#" alt="profile">
+                <img src="https://www.stevensegallery.com/50/50" alt="profile">
                 <h3>Seb Lex</h3>
                 <span>programmer</span>
             </div>
             <ul>
-                <li><a href="#">Twitter</a></li>
-                <li><a href="#">Instagram</a></li>
-                <li><a href="#">Facebook</a></li>
+                <li><a href="#"><i class="fa-brands fa-twitter"></i></a></li>
+                <li><a href="#"><i class="fa-brands fa-facebook"></i></a></li>
+                <li><a href="#"><i class="fa-brands fa-instagram-square"></i></a></li>
             </ul>
         </aside>
     </div>
