add recent posts menu

--- a/Part 1 - Personal Blog/index.html
+++ b/Part 1 - Personal Blog/index.html
@@ -71,11 +71,20 @@
                 <h3>Seb Lex</h3>
                 <span>programmer</span>
             </div>
-            <ul>
+            <ul class="social">
                 <li><a href="#"><i class="fa-brands fa-twitter"></i></a></li>
                 <li><a href="#"><i class="fa-brands fa-facebook"></i></a></li>
                 <li><a href="#"><i class="fa-brands fa-instagram-square"></i></a></li>
             </ul>
+
+            <div class="recent">
+                <h4>Recent Posts</h4>
+                <ul>
+                    <li><a href="#">Post 1</a></li>
+                    <li><a href="#">Post 2</a></li>
+                    <li><a href="#">Post 3</a></li>
+                </ul>
+            </div>
         </aside>
     </div>
 
