created blog post page

--- a/Part 1 - Personal Blog/post.html
+++ b/Part 1 - Personal Blog/post.html
@@ -16,28 +16,13 @@
             <div class="logo">Seb Lex's Blog</div>
             <div>
                 <ul class="nav">
-                    <li><a href="index.html">Home</a></li>
+                    <li><a href="#">Home</a></li>
                     <li><a href="#">About</a></li>
                     <li><a href="#">Contact</a></li>
                 </ul>
             </div>
         </div>
     </nav>
-
-    <header class="header">
-        <div class="container">
-            <div>
-                <h1>Seb Lex Blog</h1>
-                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Obcaecati dignissimos commodi voluptates
-                    vitae
-                    corporis alias, aperiam excepturi vel omnis saepe quos debitis, ducimus maiores nulla nobis hic
-                    minus?
-                    Natus, doloremque?</p>
-            </div>
-            <img src="https://www.stevensegallery.com/300/300" alt="banner">
-        </div>
-    </header>
-
 
 
     <div class="content container">
@@ -47,21 +32,15 @@
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laboriosam ullam natus culpa harum, fugit
                     reiciendis similique! Quaerat nostrum, ipsum aspernatur id vel deleniti officia consequatur
                     consectetur qui sequi eius quia.</p>
-                <button>read more</button>
-            </article>
-            <article class="card">
-                <h2>Article 2</h2>
+
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laboriosam ullam natus culpa harum, fugit
                     reiciendis similique! Quaerat nostrum, ipsum aspernatur id vel deleniti officia consequatur
                     consectetur qui sequi eius quia.</p>
-                <button>read more</button>
-            </article>
-            <article class="card">
-                <h2>Article 3</h2>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laboriosam ullam natus culpa harum, fugit
                     reiciendis similique! Quaerat nostrum, ipsum aspernatur id vel deleniti officia consequatur
                     consectetur qui sequi eius quia.</p>
-                <button>read more</button>
+
+                <a href="../">Back</a>
             </article>
         </div>
 
