--- a/Part 1 - Personal Blog/index.html
+++ b/Part 1 - Personal Blog/index.html
@@ -47,21 +47,21 @@
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laboriosam ullam natus culpa harum, fugit
                     reiciendis similique! Quaerat nostrum, ipsum aspernatur id vel deleniti officia consequatur
                     consectetur qui sequi eius quia.</p>
-                <button>read more</button>
+                <button><a href="post.html">read more</a></button>
             </article>
             <article class="card">
                 <h2>Article 2</h2>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laboriosam ullam natus culpa harum, fugit
                     reiciendis similique! Quaerat nostrum, ipsum aspernatur id vel deleniti officia consequatur
                     consectetur qui sequi eius quia.</p>
-                <button>read more</button>
+                <button><a href="post.html">read more</a></button>
             </article>
             <article class="card">
                 <h2>Article 3</h2>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laboriosam ullam natus culpa harum, fugit
                     reiciendis similique! Quaerat nostrum, ipsum aspernatur id vel deleniti officia consequatur
                     consectetur qui sequi eius quia.</p>
-                <button>read more</button>
+                <button><a href="post.html">read more</a></button>
             </article>
         </div>
 
