link nav bar 'home' button

--- a/Part 1 - Personal Blog/post.html
+++ b/Part 1 - Personal Blog/post.html
@@ -16,7 +16,7 @@
             <div class="logo">Seb Lex's Blog</div>
             <div>
                 <ul class="nav">
-                    <li><a href="#">Home</a></li>
+                    <li><a href="index.html">Home</a></li>
                     <li><a href="#">About</a></li>
                     <li><a href="#">Contact</a></li>
                 </ul>
