--- a/Part 2 - Landing Page/index.html
+++ b/Part 2 - Landing Page/index.html
@@ -9,7 +9,7 @@
     <!-- Load Google Fonts -->
     <link href="https://fonts.googleapis.com/css?family=Fira+Sans:900|Merriweather&display=swap" rel="stylesheet">
     <!-- Load Styles -->
-    <link href="css/styles.css" rel="stylesheet">
+    <link href="../css/style.css" rel="stylesheet">
 </head>
 
 <body>
@@ -85,6 +85,7 @@
         <p>&copy Udacity</p>
     </footer>
 
+    <script src="../js/app.js"></script>
 </body>
 
 </html>
