add footer html and footer css styles

--- a/Part 1 - Personal Blog/index.html
+++ b/Part 1 - Personal Blog/index.html
@@ -90,6 +90,11 @@
 
 
 
+    <footer>
+        <div class="footer">
+            Created by Seb Lex &copy; 2022
+        </div>
+    </footer>
 
 </body>
 
