add more typographic styles

--- a/Part 1 - Personal Blog/index.html
+++ b/Part 1 - Personal Blog/index.html
@@ -44,24 +44,28 @@
         <div class="cards">
             <article class="card">
                 <h2>Article 1</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laboriosam ullam natus culpa harum, fugit
+                <p><strong>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</strong> Laboriosam ullam natus
+                    culpa harum, fugit
                     reiciendis similique! Quaerat nostrum, ipsum aspernatur id vel deleniti officia consequatur
                     consectetur qui sequi eius quia.</p>
-                <button><a href="post.html">read more</a></button>
+                <button><a href="post.html"><em>read more</em></a></button>
             </article>
             <article class="card">
                 <h2>Article 2</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laboriosam ullam natus culpa harum, fugit
+                <p><strong>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</strong> Laboriosam ullam natus
+                    culpa harum, fugit
                     reiciendis similique! Quaerat nostrum, ipsum aspernatur id vel deleniti officia consequatur
                     consectetur qui sequi eius quia.</p>
-                <button><a href="post.html">read more</a></button>
+                <button><a href="post.html"><em>read more</em></a></button>
             </article>
             <article class="card">
                 <h2>Article 3</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laboriosam ullam natus culpa harum, fugit
-                    reiciendis similique! Quaerat nostrum, ipsum aspernatur id vel deleniti officia consequatur
-                    consectetur qui sequi eius quia.</p>
-                <button><a href="post.html">read more</a></button>
+                <p><strong>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</strong> Laboriosam ullam natus
+                    culpa harum, fugit
+                    reiciendis similique! <quote>Quaerat nostrum, ipsum aspernatur id vel deleniti officia consequatur
+                        consectetur qui sequi eius quia.</quote>
+                </p>
+                <button><a href="post.html"><em>read more</em></a></button>
             </article>
         </div>
 
@@ -87,7 +91,6 @@
             </div>
         </aside>
     </div>
-
 
 
     <footer>
