--- a/Part 1 - Personal Blog/post.html
+++ b/Part 1 - Personal Blog/post.html
@@ -24,48 +24,23 @@
         </div>
     </nav>
 
-    <header class="header">
-        <div class="container">
-            <div>
-                <h1>Seb Lex Blog</h1>
-                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Obcaecati dignissimos commodi voluptates
-                    vitae
-                    corporis alias, aperiam excepturi vel omnis saepe quos debitis, ducimus maiores nulla nobis hic
-                    minus?
-                    Natus, doloremque?</p>
-            </div>
-            <img src="https://www.stevensegallery.com/300/300" alt="banner">
-        </div>
-    </header>
-
-
 
     <div class="content container">
         <div class="cards">
             <article class="card">
                 <h2>Article 1</h2>
-                <p><strong>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</strong> Laboriosam ullam natus
-                    culpa harum, fugit
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laboriosam ullam natus culpa harum, fugit
                     reiciendis similique! Quaerat nostrum, ipsum aspernatur id vel deleniti officia consequatur
                     consectetur qui sequi eius quia.</p>
-                <button><a href="post.html"><em>read more</em></a></button>
-            </article>
-            <article class="card">
-                <h2>Article 2</h2>
-                <p><strong>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</strong> Laboriosam ullam natus
-                    culpa harum, fugit
+
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laboriosam ullam natus culpa harum, fugit
                     reiciendis similique! Quaerat nostrum, ipsum aspernatur id vel deleniti officia consequatur
                     consectetur qui sequi eius quia.</p>
-                <button><a href="post.html"><em>read more</em></a></button>
-            </article>
-            <article class="card">
-                <h2>Article 3</h2>
-                <p><strong>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</strong> Laboriosam ullam natus
-                    culpa harum, fugit
-                    reiciendis similique! <quote>Quaerat nostrum, ipsum aspernatur id vel deleniti officia consequatur
-                        consectetur qui sequi eius quia.</quote>
-                </p>
-                <button><a href="post.html"><em>read more</em></a></button>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laboriosam ullam natus culpa harum, fugit
+                    reiciendis similique! Quaerat nostrum, ipsum aspernatur id vel deleniti officia consequatur
+                    consectetur qui sequi eius quia.</p>
+
+                <a href="../">Back</a>
             </article>
         </div>
 
@@ -93,11 +68,7 @@
     </div>
 
 
-    <footer>
-        <div class="footer">
-            Created by Seb Lex &copy; 2022
-        </div>
-    </footer>
+
 
 </body>
 
